@@ -1,7 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
 export(IdTaxaToDataFrame)
-export(TAXONOMY_RANKS)
 export(ZTransform)
 export(addAlpha)
 export(addCluster)
