@@ -1,9 +1,7 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/taxonomy.R
-\docType{data}
 \name{taxonomy-methods}
 \alias{taxonomy-methods}
-\alias{TAXONOMY_RANKS}
 \alias{taxonomyRanks}
 \alias{taxonomyRanks,SummarizedExperiment-method}
 \alias{taxonomyRankEmpty}
@@ -18,13 +16,7 @@
 \alias{mapTaxonomy,SummarizedExperiment-method}
 \alias{IdTaxaToDataFrame}
 \title{Functions for accessing taxonomic data stored in \code{rowData}.}
-\format{
-a \code{character} vector of length 8 containing the taxonomy ranks
-recognized. In functions this is used as case insensitive.
-}
 \usage{
-TAXONOMY_RANKS
-
 taxonomyRanks(x)
 
 \S4method{taxonomyRanks}{SummarizedExperiment}(x)
@@ -212,4 +204,3 @@ getTaxonomyRanks()
 \code{\link[TreeSummarizedExperiment:toTree]{toTree}},
 \code{\link[TreeSummarizedExperiment:resolveLoop]{resolveLoop}}
 }
-\keyword{datasets}
